# EmbeddedFinalProject

./: .gitignore  .gitmodules  README.md
dynamixel_read_write/: CMakeLists.txt  package.xml
dynamixel_read_write/src/: read_write_node.cpp
dynamixel_sdk_image/: CMakeLists.txt  package.xml
dynamixel_sdk_image/src/: image_subscriber.cpp
dynamixel_sdk_maincontroller/: CMakeLists.txt  package.xml
dynamixel_sdk_maincontroller/src/: main_controller.cpp
project_launch/: package.xml  setup.cfg  setup.py
project_launch/launch/: project_launch.py
